--- a/package.json
+++ b/package.json
@@ -36,5 +36,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.19.0",
+    "eslint-plugin-react": "^7.22.0",
+    "json-loader": "^0.5.7",
+    "prettier": "2.2.1"
   }
 }
